# string_automata_cpp

./: CMakeLists.txt  README.md  finite_auto_tools.cpp  finite_auto_tools.hpp  main.cpp  test_unit.h
